devops/kubernetes/platform-core/overlays/self-hosted/provider-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-core
  annotations:
    metallb.universe.tf/address-pool: country-public
